# empire

./: .dockerignore  .editorconfig  .env  .env.test  .gitignore  .oxfmtrc.json  AGENTS.md  CLAUDE.md  Cargo.toml  Dockerfile  LICENSE  README.md  configuration.yaml  deny.toml  diesel.toml  log4rs.yaml  mise.toml  rustfmt.toml  spec.yaml
.claude/: settings.local.json
.github/: dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_spec.md
.github/workflows/: audit.yml  rust.yml
.junie/: guidelines.md
config/: application.dev.yaml  application.prod.yaml  application.yaml
crates/rpc/: Cargo.toml
crates/rpc/src/: buffer.rs  lib.rs  macros.rs  packet.rs
crates/rpc/src/net/: receiver.rs  sender.rs
docs/: api.md  combat_system.md  high_perf_arenas.md  mechanics.md  modifiers.md  naming.md  repository_migration.md  resources.md  tracing_guidelines.md  v0.1.0_dependency_graph.md  v0.1.0_roadmap.md
docs/plans/: api.md  bld_unlocks.md  high_perf_arenas.md  naming.md  repository_migration.md
migrations/00000000000000_diesel_initial_setup/: up.sql
migrations/2023-02-01-100418_history/: down.sql  up.sql
migrations/2023-03-01-110026_job_queue/: down.sql  up.sql
migrations/2024-02-01-010101_factions/: down.sql  up.sql
migrations/2024-03-01-054010_buildings/: down.sql  up.sql
migrations/2024-03-02-054020_building_levels/: down.sql  up.sql
migrations/2024-03-02-054030_building_requirements/: down.sql  up.sql
migrations/2024-03-03-054030_building_resources/: down.sql  up.sql
migrations/2024-04-01-055918_players/: up.sql
migrations/2024-04-01-055918_users/: up.sql
migrations/2024-04-01-072558_player_sessions/: down.sql  up.sql
migrations/2024-04-02-055924_player_resources/: down.sql  up.sql
migrations/2024-04-02-055924_user_resources/: down.sql  up.sql
migrations/2024-04-05-055932_player_buildings/: down.sql  up.sql
migrations/2024-04-05-055932_user_buildings/: up.sql
migrations/2024-04-06-073554_player_accumulators/: down.sql  up.sql
migrations/2024-04-06-073554_user_accumulators/: down.sql  up.sql
migrations/2024-05-01-074658_resource_generation/: up.sql
migrations/2024-06-31-202715_ulid/: down.sql  up.sql
migrations/2024-07-10-082403_users/: up.sql
migrations/2024-07-11-061501_buildings/: down.sql  up.sql
migrations/2024-07-11-070837_factions/: down.sql  up.sql
migrations/2024-07-11-071723_user_buildings/: down.sql  up.sql
migrations/2024-07-15-143355_resources/: up.sql
migrations/2024-07-19-010101_factions/: down.sql  up.sql
migrations/2024-07-19-054010_buildings/: up.sql
migrations/2024-07-19-054020_buildings_levels/: up.sql
migrations/2024-07-19-055850_factions/: up.sql
migrations/2024-07-19-055914_buildings/: up.sql
migrations/2024-07-19-055918_users/: up.sql
migrations/2024-07-19-055924_resources/: down.sql  up.sql
migrations/2024-07-19-055924_user_resources/: down.sql  up.sql
migrations/2024-07-19-055932_user_buildings/: down.sql  up.sql
migrations/2024-07-19-063632_user_buildings/: down.sql  up.sql
migrations/2024-07-19-063927_building_levels/: down.sql  up.sql
migrations/2024-07-19-192504_building_levels/: up.sql
migrations/2025-01-01-094749_modifiers/: down.sql  up.sql
migrations/2025-01-02-111159_active_modifiers/: down.sql  up.sql
migrations/2025-01-03-141926_modifier_history/: up.sql
migrations/2025-01-04-174417_faction_modifiers/: down.sql  up.sql
migrations/2025-02-01-074658_resource_generation/: up.sql
migrations/2025-02-01-214321_units/: down.sql  up.sql
migrations/2025-02-02-214455_unit_costs/: down.sql  up.sql
migrations/2025-02-03-214503_player_units/: down.sql  up.sql
migrations/2025-02-04-214545_training_queue/: down.sql  up.sql
migrations/2025-02-25-062420_building_resources/: up.sql
migrations/2025-02-25-073554_user_accumulators/: up.sql
migrations/2025-02-25-073558_resource_generation/: up.sql
migrations/2025-02-25-073558_resourge_generation/: down.sql  up.sql
migrations/2025-02-25-074654_resource_accumulators/: down.sql  up.sql
migrations/2025-04-18-141926_modifier_history/: down.sql  up.sql
scripts/: init_db.sh  pq_clean.sh  test_db.sh
seeds/: 001_building_levels.sql  002_production_building_levels.sql  003_research_building_levels.sql  004_building_requirements.sql  005_military_building_levels.sql  006_magic_building_levels.sql  007_defense_building_levels.sql  008_religion_building_levels.sql  009_monument_building_levels.sql  010_neutral_building_levels.sql  100_building_resources.sql  102_research_building_resources.sql  103_magic_building_resources.sql  104_defense_building_resources.sql  105_religion_building_resources.sql  106_monument_building_resources.sql  107_neutral_building_resources.sql  200_unit_definitions.sql  201_building_unit_types.sql  202_training_capacity.sql  900_test_accounts.sql  README.md
src/: configuration.rs  custom_schema.rs  lib.rs  main.rs  schema.rs  startup.rs  telemetry.rs
src/auth/: mod.rs  session_operations.rs  session_service.rs  utils.rs
src/controllers/: auth_controller.rs  health_controller.rs  mod.rs  user_controller.rs
src/data/: buildings.rs  factions.rs  hydrate.rs  mod.rs
src/db/: active_modifiers.rs  building_levels.rs  building_requirements.rs  building_unit_types.rs  buildings.rs  conn.rs  connection.rs  extractor.rs  factions.rs  migrations.rs  mod.rs  modifiers.rs  player_buildings.rs  player_sessions.rs  player_units.rs  players.rs  resource_generation.rs  resources.rs  seeds.rs  training_queue.rs  unit_costs.rs  units.rs  user_buildings.rs  users.rs
src/domain/: accumulator.rs  active_modifier.rs  app_state.rs  auth.rs  building.rs  building_level.rs  building_levels.rs  buildings.rs  error.rs  faction.rs  factions.rs  job.rs  jobs.rs  mod.rs  modifier.rs  modifier_history.rs  resource.rs  resource_accumulator.rs  resource_generation.rs  user.rs  (+1 more)
tests/: active_modifier_constraints.rs  auth_controller.rs  faction_modifiers.rs  health_check.rs  job_processor.rs  modifier_constraints.rs  modifier_scheduler.rs  resource_service.rs  user_controller.rs  user_triggers.rs
(+135 files in other folders)
