[workspace.package]
version = "0.1.0"
edition = "2021"
repository = "https://github.com/lucasvienna/empire.git"
readme = "README.md"
publish = false

[package]
name = "empire"
version.workspace = true
edition.workspace = true
repository.workspace = true
readme.workspace = true
publish.workspace = true

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "empire"

[dependencies]
anyhow = { workspace = true }
axum = { version = "0.8.1", features = ["query", "macros"] }
axum-test = { version = "17.2.0", features = ["all"] }
chrono = { version = "0.4.39", features = ["serde"] }
config = "0.15.7"
diesel = { version = "2.2.7", features = ["postgres", "r2d2", "extras"] }
diesel_migrations = "2.2.0"
dotenvy = "0.15.7"
http-body-util = "0.1.2"
logs-wheel = "0.3.1"
mime = "0.3.17"
reqwest = { version = "0.12.12", features = ["json"] }
secrecy = { version = "0.10.3", features = ["serde"] }
serde = { version = "1.0.217", features = ["derive"] }
serde-aux = "4.5.0"
serde_json = "1.0.138"
tokio = { workspace = true }
tower = { version = "0.5.2", features = ["full"] }
tower-http = { version = "0.6.2", features = ["full"] }
tower-request-id = "0.3.0"
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
uuid = { version = "1.12.1", features = ["v4", "v7", "fast-rng", "macro-diagnostics", "serde"] }

[workspace]
members = [
    ".",
    "crates/rpc"
]

[workspace.dependencies]
anyhow = "1.0.95"
empire = { path = "." }
tokio = { version = "1.43.0", features = ["macros", "rt-multi-thread", "net", "signal"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
