[workspace.package]
version = "0.1.0"
edition = "2021"
repository = "https://github.com/lucasvienna/empire.git"
readme = "README.md"
publish = false

[package]
name = "empire"
version.workspace = true
edition.workspace = true
repository.workspace = true
readme.workspace = true
publish.workspace = true

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "empire"

[dependencies]
anyhow = { workspace = true }
argon2 = "0.5.3"
axum = { version = "0.8.3", features = ["query", "macros", "tokio", "http2"] }
axum-extra = { version = "0.10.1", features = ["cookie", "tracing", "typed-header"] }
axum-test = { version = "17.3.0", features = ["all"] }
bigdecimal = { version = "0.4.8", features = ["std", "serde", "serde_json"] }
chrono = { version = "0.4.40", features = ["serde"] }
config = "0.15.11"
cookie = { version = "0.18.1", features = ["secure"] }
derive_more = { version = "2.0.1", features = ["full"] }
diesel = { version = "2.2.10", features = ["postgres", "extras"] }
diesel_migrations = "2.2.0"
dotenvy = "0.15.7"
http-body-util = "0.1.3"
logs-wheel = "0.3.1"
mime = "0.3.17"
r2d2 = "0.8.10"
reqwest = { version = "0.12.12", features = ["json"] }
secrecy = { version = "0.10.3", features = ["serde"] }
serde = { version = "1.0.219", features = ["derive"] }
serde-aux = "4.7.0"
serde_json = "1.0.140"
tokio = { workspace = true }
tokio-util = { version = "0.7.14", features = ["rt"] }
tower = { version = "0.5.2", features = ["full"] }
tower-http = { version = "0.6.2", features = ["full"] }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
uuid = { version = "1.16.0", features = ["v4", "v7", "fast-rng", "macro-diagnostics", "serde"] }
unicode-segmentation = "1.12.0"
validator = "0.20.0"
ulid = { version = "1.2.1", features = ["serde", "postgres", "uuid"] }
jsonwebtoken = "9.3.1"

[dev-dependencies]
claims = "0.8"
fake = "4.3"
quickcheck = "1.0.3"
quickcheck_macros = "1"
rand = "0.9"

[workspace]
members = [
    ".",
    "crates/rpc"
]

[workspace.dependencies]
anyhow = "1.0.98"
empire = { path = "." }
tokio = { version = "1.44.2", features = ["full"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
