[workspace.package]
version = "0.1.0"
edition = "2021"
repository = "https://github.com/lucasvienna/empire.git"
readme = "README.md"
publish = false

[package]
name = "empire"
version.workspace = true
edition.workspace = true
repository.workspace = true
readme.workspace = true
publish.workspace = true

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "empire"

[dependencies]
anyhow = { workspace = true }
argon2 = "0.5.3"
axum = { version = "0.8.5", features = ["query", "macros", "tokio", "http2"] }
axum-extra = { version = "0.10.2", features = ["cookie", "tracing", "typed-header", "erased-json"] }
axum-test = { version = "18.1.0", features = ["all"] }
bigdecimal = { version = "0.4.8", features = ["std", "serde", "serde_json"] }
blake2 = "0.10.6"
chrono = { version = "0.4.42", features = ["serde"] }
config = "0.15.17"
cookie = { version = "0.18.1", features = ["secure"] }
data-encoding = "2.9.0"
derive_more = { version = "2.0.1", features = ["full"] }
diesel = { version = "2.3.2", features = ["postgres", "extras"] }
diesel_migrations = "2.3.0"
dotenvy = "0.15.7"
jsonwebtoken = { version = "10.0.0", features = ["rust_crypto"] }
http-body-util = "0.1.3"
logs-wheel = "0.3.1"
mime = "0.3.17"
r2d2 = "0.8.10"
rand = { version = "0.9.2", features = ["default", "serde"] }
reqwest = { version = "0.12.23", features = ["json"] }
secrecy = { version = "0.10.3", features = ["serde"] }
serde = { version = "1.0.228", features = ["derive"] }
serde-aux = "4.7.0"
serde_json = "1.0.145"
strum = "0.27.2"
strum_macros = "0.27.2"
tokio = { workspace = true }
tokio-util = { version = "0.7.16", features = ["rt"] }
tower = { version = "0.5.2", features = ["full"] }
tower-http = { version = "0.6.6", features = ["full"] }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
uuid = { version = "1.18.1", features = ["v4", "v7", "fast-rng", "macro-diagnostics", "serde"] }
unicode-segmentation = "1.12.0"
validator = "0.20.0"
ulid = { version = "1.2.1", features = ["serde", "postgres", "uuid"] }

[dev-dependencies]
claims = "0.8"
fake = "4.4"
quickcheck = "1.0.3"
quickcheck_macros = "1"
rand = "0.9"

[workspace]
members = [
    ".",
    "crates/rpc"
]

[workspace.dependencies]
anyhow = "1.0.100"
empire = { path = "." }
tokio = { version = "1.47.1", features = ["full"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.20", features = ["env-filter"] }
